# src/main/java/com/lawfirm/law/firm/dto/ClientCreateRequestDTO.java
@@ -40,9 +40,11 @@ public class ClientCreateRequestDTO {
     private String referencePhone;
     private String referenceResponsible;
     private MaritalStatus maritalStatus;
+    @NotNull
     private BenefitType benefit;
+    @NotNull
     private Situation situation;
-    private String benefitNumber;
+    private String beneficiaryNumber;
     private String nitPis;
     private String profession;
     private String ctps;
@@ -94,8 +96,8 @@ public class ClientCreateRequestDTO {
     public Situation getSituation() { return situation; }
     public void setSituation(Situation situation) { this.situation = situation; }
 
-    public String getBenefitNumber() { return benefitNumber; }
-    public void setBenefitNumber(String benefitNumber) { this.benefitNumber = benefitNumber; }
+    public String getBeneficiaryNumber() { return beneficiaryNumber; }
+    public void setBeneficiaryNumber(String beneficiaryNumber) { this.beneficiaryNumber = beneficiaryNumber; }
 
     public String getNitPis() { return nitPis; }
     public void setNitPis(String nitPis) { this.nitPis = nitPis; }
